--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==4.1.2
 django-cors-headers==3.13.0
 django-rest-knox==4.2.0
 djangorestframework==3.14.0
+Pillow==9.2.0
 pycparser==2.21
 pytz==2022.4
 sqlparse==0.4.3
